server/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoe2companion-status
  namespace: default
  labels:
    app: aoe2companion-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoe2companion-status
  template:
    metadata:
      labels:
        app: aoe2companion-status
    spec:
      containers:
        - name: aoe2companion-status
          image: denniske/aoe2companion-status:$COMMIT_SHA1
          ports:
            - containerPort: 80
              name: http
