server/deploy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aoe2companion-status-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - status.aoe2companion.com
      secretName: status-aoe2companion-com-tls
  rules:
    - host: status.aoe2companion.com
      http:
        paths:
          - backend:
              serviceName: aoe2companion-status
              servicePort: 80
